<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_gray_100">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/color_white"
        android:gravity="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/dp_30"
        android:text="@string/title_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_320"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:background="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >
        <TextView
            android:id="@+id/text_total_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintBottom_toBottomOf="@+id/text_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/text_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/favorite"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/text_total_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintBottom_toBottomOf="@+id/text_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_download"
            />
        <TextView
            android:id="@+id/text_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/download"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_favorite"
            />

        <TextView
            android:id="@+id/text_total_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintBottom_toBottomOf="@+id/text_playlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_playlist"
            />
        <TextView
            android:id="@+id/text_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/playlist"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_download"
            />

        <TextView
            android:id="@+id/text_total_music_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintBottom_toBottomOf="@+id/text_music_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_music_file"
            />
        <TextView
            android:id="@+id/text_music_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/my_music_file"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_playlist"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
